--- a/UCMainForBasicandAdditionalSettings/UCMainForBasicandAdditionalSettings.xaml
+++ b/UCMainForBasicandAdditionalSettings/UCMainForBasicandAdditionalSettings.xaml
@@ -8,6 +8,7 @@
              xmlns:uc_bs_umts="clr-namespace:UCBasicSettings;assembly=UCBasicSettings"
              xmlns:uc_as_umts="clr-namespace:UCAdditionalSettings;assembly=UCAdditionalSettings"
              mc:Ignorable="d" 
+             x:Name="root"
              d:DesignHeight="300" d:DesignWidth="600">
     <Grid x:Name="MainGrid">
         <Grid.RowDefinitions>
