#подправил название классов

--- a/UCAdditionalSettings/UserControlAdditionalSettingsUMTS.xaml
+++ b/UCAdditionalSettings/UserControlAdditionalSettingsUMTS.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-             x:Class="UCAdditionalSettings.UserControlAdditionalSettings"
+             x:Class="UCAdditionalSettingsUMTS.UserControlAdditionalSettingsUMTS"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UCAdditionalSettings"
+             xmlns:local="clr-namespace:UCAdditionalSettingsUMTS"
              xmlns:l="clr-namespace:LocalizationBasicAndAdditionalSettings.Localization;assembly=LocalizationBasicAndAdditionalSettings"
              x:Name="root"
              mc:Ignorable="d" 
