--- a/UCBasicSettings/AddDirectChannelWindow.xaml
+++ b/UCBasicSettings/AddDirectChannelWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  x:Class="UCBasicSettings.AddDirectChannelWindow"
+﻿<Window xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  x:Class="UCBasicSettingsUMTS.AddDirectChannelWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:l="clr-namespace:LocalizationBasicAndAdditionalSettings.Localization;assembly=LocalizationBasicAndAdditionalSettings" 
-        xmlns:local="clr-namespace:UCBasicSettings"
+        xmlns:local="clr-namespace:UCBasicSettingsUMTS"
         mc:Ignorable="d" 
         Title="{l:Localization add_downlink_channel}" Height="200" Width="350" MinHeight="160">
     <Grid Margin="5">
