--- a/UCBasicSettings/UserControlBasicSettingsUMTS.xaml
+++ b/UCBasicSettings/UserControlBasicSettingsUMTS.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"  x:Class="UCBasicSettings.UserControlBasicSettings"            
+﻿<UserControl xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"  
+             x:Class="UCBasicSettingsUMTS.UserControlBasicSettingsUMTS"            
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UCBasicSettings"
+             xmlns:local="clr-namespace:UCBasicSettingsUMTS"
              xmlns:sw="clr-namespace:SliderWeakening;assembly=SliderWeakening"
              xmlns:l="clr-namespace:LocalizationBasicAndAdditionalSettings.Localization;assembly=LocalizationBasicAndAdditionalSettings"  
              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" 
