--- a/UCBasicSettings/UserControlBasicSettingsUMTS.xaml
+++ b/UCBasicSettings/UserControlBasicSettingsUMTS.xaml
@@ -8,6 +8,7 @@
              xmlns:sw="clr-namespace:SliderWeakening;assembly=SliderWeakening"
              xmlns:l="clr-namespace:LocalizationBasicAndAdditionalSettingsUMTS.Localization;assembly=LocalizationBasicAndAdditionalSettingsUMTS"  
              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" 
+             xmlns:common_lib="clr-namespace:CommonClassLibraryForSolutionNetwork;assembly=CommonClassLibraryForSolutionNetwork"
              mc:Ignorable="d" 
              x:Name="root"
              Validation.Error="UserControl_HasError"   
@@ -37,7 +38,7 @@
                         <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.Resources>
-                        <local:MCC_MNC_SelectedIndex_Convert  x:Key="MCC_MNC_SelectedIndex_Convert"/>
+                        <common_lib:MCC_MNC_SelectedIndex_Convert  x:Key="MCC_MNC_SelectedIndex_Convert"/>
                     </Grid.Resources>
 
                     <TextBlock Grid.Column="0" HorizontalAlignment="Right" Margin="4 5" VerticalAlignment="Center" Text="MCC"/>
